samples/_failures_safe/1761706784_51e6c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3f1dec6.c: In function ‘main’:
./samples/SAFE/__tmp_f3f1dec6.c:158:17: error: expected ‘;’ at end of input
  158 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_f3f1dec6.c:158:9: error: expected declaration or statement at end of input
  158 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_f3f1dec6.c:158:9: error: expected declaration or statement at end of input
